--- a/src/Pages/PGPMFlexPage/PGPMFlexPage.css
+++ b/src/Pages/PGPMFlexPage/PGPMFlexPage.css
@@ -82,13 +82,11 @@
 
 
 
-/* Section Wrapper */
 .PGPMFLEX-fees-tab-section {
   padding: 80px 0;
   background: #f6f8fb;
 }
 
-/* Header */
 .PGPMFLEX-fees-tab-header h2 {
   font-size: 2.4rem;
   font-weight: 700;
@@ -101,7 +99,6 @@
   font-size: 1.05rem;
 }
 
-/* Cards */
 .PGPMFLEX-fees-tab-card {
   border: none;
   border-radius: 18px;
@@ -115,7 +112,6 @@
   border-top: 6px solid #5ac501;
 }
 
-/* Badge */
 .PGPMFLEX-fees-tab-badge {
   font-size: 0.85rem;
   padding: 6px 14px;
@@ -134,14 +130,12 @@
   color: #fff;
 }
 
-/* Title */
 .PGPMFLEX-fees-tab-title {
   font-weight: 600;
   margin-bottom: 20px;
   color: #1c2c3a;
 }
 
-/* Price */
 .PGPMFLEX-fees-tab-price-box {
   display: flex;
   align-items: baseline;
@@ -160,14 +154,12 @@
   color: #0d6efd;
 }
 
-/* Description */
 .PGPMFLEX-fees-tab-desc {
   font-size: 0.95rem;
   color: #5f6f81;
   line-height: 1.6;
 }
 
-/* Installments */
 .PGPMFLEX-fees-tab-installment-list {
   list-style: none;
   padding: 0;
@@ -186,7 +178,6 @@
   color: #002d5b;
 }
 
-/* Distribution Note */
 .PGPMFLEX-fees-tab-distribution {
   margin-top: 15px;
   padding: 12px;
@@ -197,7 +188,6 @@
   text-align: center;
 }
 
-/* Footer */
 .PGPMFLEX-fees-tab-footer {
   margin-top: 35px;
   font-size: 0.9rem;
@@ -575,4 +565,56 @@
     margin-top: 0;
   }
 
+}
+
+
+
+.QWERT-fees-section {
+  width: 100%;
+}
+
+/* ROW CONTROLS HEIGHT */
+.QWERT-fees-row {
+  display: flex;
+  align-items: stretch;
+}
+
+/* LEFT COLUMN */
+.QWERT-fees-image-col {
+  width: 50%;
+  display: flex;
+  overflow: hidden;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
+/* IMAGE */
+.QWERT-fees-image {
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+/* RIGHT COLUMN */
+.QWERT-fees-right {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+
+}
+
+/* DARK BLOCK */
+.QWERT-fees-dark {
+  background: #1f2a44;
+  padding: 30px;
+  border-top-right-radius: 10px;
+}
+
+/* LIGHT BLOCK */
+.QWERT-fees-light {
+  background: #f7f7f7;
+  padding: 30px;
+        border-bottom-right-radius: 10px;
 }
